--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
+  "name": "portfolio",
+  "version": "v0.0.0.test",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
